[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/signal_start.gd" type="Script" id=1]
[ext_resource path="res://scenes/signal_launcher.tscn" type="PackedScene" id=2]
[ext_resource path="res://models/thunder_model_temp.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/sfx/signal/start_signal_2.wav" type="AudioStream" id=4]


[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.121569, 0.827451, 0.976471, 1 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 4.04619, 0, 0, Vector2( 0.268677, 0.402099 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.00697935 ), -0.755677, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
spread = 0.0
gravity = Vector3( 0, 0.1, 0 )
initial_velocity = -0.1
angular_velocity = 0.0
scale_curve = SubResource( 3 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 0.1, 0.1, 0.1 )

[node name="signal_start" type="Spatial" groups=[
"signal_start",
]]
script = ExtResource( 1 )

[node name="particles_pivot" type="Position3D" parent="."]
editor/display_folded = true
visible = false

[node name="particles" type="Particles" parent="particles_pivot"]
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, 0.2, 0, 0 )
material_override = SubResource( 1 )
amount = 6
local_coords = false
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 5 )

[node name="particles_2" type="Particles" parent="particles_pivot"]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -0.2, 0, 0 )
material_override = SubResource( 1 )
amount = 6
local_coords = false
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 5 )

[node name="signal_launcher" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0 )
visible = false
velocity = 0.0

[node name="light" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0 )
light_color = Color( 0.0823529, 0.945098, 0.937255, 1 )
light_energy = 12.0
omni_range = 1.0
omni_attenuation = 1.93188

[node name="model_thunder" parent="." instance=ExtResource( 3 )]
visible = false

[node name="thunder_tween" type="Tween" parent="."]

[node name="sfx_start_signal" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource( 4 )
unit_size = 10.0
bus = "SFX"
